interaction, splash done

--- a/chat__first-screen.html
+++ b/chat__first-screen.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="chat">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -207,7 +207,11 @@
         </svg>
       </button>
       <div class="input__chat_write">
-        <input type="text" placeholder="Write your message..." />
+        <input
+          class="input__chat_area"
+          type="text"
+          placeholder="Write your message..."
+        />
         <div class="input__right-btns">
           <button class="input__emoticon">
             <svg
