--- a/chats.html
+++ b/chats.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="chats">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -111,7 +111,7 @@
             </g>
           </svg>
         </button>
-        <button>
+        <button class="gnb__setting" onclick="location.href = 'settings.html'">
           <div class="badge__dot-gnb"></div>
           <svg
             width="100px"
@@ -148,6 +148,46 @@
       </div>
     </nav>
     <main class="bg-gradaiton">
+      <a class="user-component--2x" href="chat__first-screen.html">
+        <div class="profile--2x">
+          <div class="profile-mask">
+            <img
+              class="profile-photo"
+              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
+            />
+          </div>
+        </div>
+        <div class="user-component__content--3x">
+          <div class="user__text">
+            <span class="user__nickname">Nickname</span>
+            <span class="user__message">Hi</span>
+          </div>
+          <div class="user__subinfo">
+            <span class="user__sub-text">12:22</span>
+            <div class="badge__number-list">4</div>
+          </div>
+        </div>
+      </a>
+      <a class="user-component--2x" href="chat__first-screen.html">
+        <div class="profile--2x">
+          <div class="profile-mask">
+            <img
+              class="profile-photo"
+              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
+            />
+          </div>
+        </div>
+        <div class="user-component__content--3x">
+          <div class="user__text">
+            <span class="user__nickname">Nickname</span>
+            <span class="user__message">Hi</span>
+          </div>
+          <div class="user__subinfo">
+            <span class="user__sub-text">12:22</span>
+            <div class="badge__number-list">4</div>
+          </div>
+        </div>
+      </a>
       <a class="user-component--2x" href="chat__first-screen.html">
         <div class="profile--2x">
           <div class="profile-mask">
