--- a/find.html
+++ b/find.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="find">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -57,7 +57,7 @@
             </g>
           </svg>
         </button>
-        <button>
+        <button class="gnb__setting" onclick="location.href = 'settings.html'">
           <div class="badge__dot-gnb"></div>
           <svg
             width="100px"
@@ -225,121 +225,124 @@
           ><i class="fas fa-chevron-right"></i>
         </div>
       </article>
-      <article class="open-chat">
-        <div class="open-chat__column">
-          <span>#ToyStory</span>
-          <span>#ToyStory#Woody#Buzz Lightyear</span>
-          <div class="open-chat__status">
-            <div class="profile--tiny">
-              <div class="profile-mask">
-                <img class="profile-photo" src="img/img/woody.jpeg"></img>
+      <div class="open-chat__list">
+        <article class="open-chat">
+          <div class="open-chat__column">
+            <span>#ToyStory</span>
+            <span>#ToyStory#Woody#Buzz Lightyear</span>
+            <div class="open-chat__status">
+              <div class="profile--tiny">
+                <div class="profile-mask">
+                  <img class="profile-photo" src="img/img/woody.jpeg"></img>
+                </div>
               </div>
+              <span>2,202 members |</span><span>Active</span>
             </div>
-            <span>2,202 members |</span><span>Active</span>
           </div>
-        </div>
-        <div class="open-chat__column">
-          <div class="open-chat__thumbnail">
-            <div class="open-chat__like">
-              <i class="fas fa-heart"></i>
-              <span>200</span>
-            </div>
-            <img class="open-chat__photo" src="img/img/toy_story.jpg"></img>
-          </div>
-        </div>
-      </article>
-      <article class="open-chat">
-        <div class="open-chat__column">
-          <span>#BTS</span>
-          <span>#BTS#ARMY</span>
-          <div class="open-chat__status">
-            <div class="profile--tiny">
-              <div class="profile-mask">
-                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          <div class="open-chat__column">
+            <div class="open-chat__thumbnail">
+              <div class="open-chat__like">
+                <i class="fas fa-heart"></i>
+                <span>200</span>
               </div>
+              <img class="open-chat__photo" src="img/img/toy_story.jpg"></img>
             </div>
-            <span>202 members |</span><span>Active</span>
           </div>
-        </div>
-        <div class="open-chat__column">
-          <div class="open-chat__thumbnail">
-            <div class="open-chat__like">
-              <i class="fas fa-heart"></i>
-              <span>200</span>
-            </div>
-            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-          </div>
-        </div>
-      </article>
-      <article class="open-chat">
-        <div class="open-chat__column">
-          <span>#BTS</span>
-          <span>#BTS#ARMY</span>
-          <div class="open-chat__status">
-            <div class="profile--tiny">
-              <div class="profile-mask">
-                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+        </article>
+        <article class="open-chat">
+          <div class="open-chat__column">
+            <span>#BTS</span>
+            <span>#BTS#ARMY</span>
+            <div class="open-chat__status">
+              <div class="profile--tiny">
+                <div class="profile-mask">
+                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                </div>
               </div>
+              <span>202 members |</span><span>Active</span>
             </div>
-            <span>202 members |</span><span>Active</span>
           </div>
-        </div>
-        <div class="open-chat__column">
-          <div class="open-chat__thumbnail">
-            <div class="open-chat__like">
-              <i class="fas fa-heart"></i>
-              <span>200</span>
-            </div>
-            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-          </div>
-        </div>
-      </article>
-      <article class="open-chat">
-        <div class="open-chat__column">
-          <span>#BTS</span>
-          <span>#BTS#ARMY</span>
-          <div class="open-chat__status">
-            <div class="profile--tiny">
-              <div class="profile-mask">
-                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+          <div class="open-chat__column">
+            <div class="open-chat__thumbnail">
+              <div class="open-chat__like">
+                <i class="fas fa-heart"></i>
+                <span>200</span>
               </div>
+              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
             </div>
-            <span>202 members |</span><span>Active</span>
           </div>
-        </div>
-        <div class="open-chat__column">
-          <div class="open-chat__thumbnail">
-            <div class="open-chat__like">
-              <i class="fas fa-heart"></i>
-              <span>200</span>
-            </div>
-            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-          </div>
-        </div>
-      </article>
-      <article class="open-chat">
-        <div class="open-chat__column">
-          <span>#BTS</span>
-          <span>#BTS#ARMY</span>
-          <div class="open-chat__status">
-            <div class="profile--tiny">
-              <div class="profile-mask">
-                <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+        </article>
+        <article class="open-chat">
+          <div class="open-chat__column">
+            <span>#BTS</span>
+            <span>#BTS#ARMY</span>
+            <div class="open-chat__status">
+              <div class="profile--tiny">
+                <div class="profile-mask">
+                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                </div>
               </div>
+              <span>202 members |</span><span>Active</span>
             </div>
-            <span>202 members |</span><span>Active</span>
           </div>
-        </div>
-        <div class="open-chat__column">
-          <div class="open-chat__thumbnail">
-            <div class="open-chat__like">
-              <i class="fas fa-heart"></i>
-              <span>200</span>
+          <div class="open-chat__column">
+            <div class="open-chat__thumbnail">
+              <div class="open-chat__like">
+                <i class="fas fa-heart"></i>
+                <span>200</span>
+              </div>
+              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
             </div>
-            <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
           </div>
-        </div>
-      </article>
+        </article>
+        <article class="open-chat">
+          <div class="open-chat__column">
+            <span>#BTS</span>
+            <span>#BTS#ARMY</span>
+            <div class="open-chat__status">
+              <div class="profile--tiny">
+                <div class="profile-mask">
+                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                </div>
+              </div>
+              <span>202 members |</span><span>Active</span>
+            </div>
+          </div>
+          <div class="open-chat__column">
+            <div class="open-chat__thumbnail">
+              <div class="open-chat__like">
+                <i class="fas fa-heart"></i>
+                <span>200</span>
+              </div>
+              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+            </div>
+          </div>
+        </article>
+        <article class="open-chat">
+          <div class="open-chat__column">
+            <span>#BTS</span>
+            <span>#BTS#ARMY</span>
+            <div class="open-chat__status">
+              <div class="profile--tiny">
+                <div class="profile-mask">
+                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                </div>
+              </div>
+              <span>202 members |</span><span>Active</span>
+            </div>
+          </div>
+          <div class="open-chat__column">
+            <div class="open-chat__thumbnail">
+              <div class="open-chat__like">
+                <i class="fas fa-heart"></i>
+                <span>200</span>
+              </div>
+              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+            </div>
+          </div>
+        </article>
+
+      </div>
     </main>
     <article class="bottom-tabbar">
       <ul class="bottom-tabbar-box">
