--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="friends">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -57,8 +57,32 @@
             </g>
           </svg>
         </button>
-
-        <button>
+        <button class="gnb__interaction">
+          <!-- <svg
+            id="icon_music"
+            width="inherit"
+            height="inherit"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_music_2</title>
+            <g
+              id="icon_music_2"
+              stroke="none"
+              stroke-width="1"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <path
+                d="M100,17.85 C100,7.99171722 92.0082828,0 82.15,0 L30,0 C27.2385763,0 25,2.23857625 25,5 L25,51.75 C22.6638279,50.6089125 20.0999359,50.010671 17.5,50 C7.83501688,50 0,57.8350169 0,67.5 C0,77.1649831 7.83501688,85 17.5,85 C27.1649831,85 35,77.1649831 35,67.5 L35,10 L82.15,10 C86.4740843,10.0272821 89.9727179,13.5259157 90,17.85 L90,66.75 C87.6638279,65.6089125 85.0999359,65.010671 82.5,65 C72.8350169,65 65,72.8350169 65,82.5 C65,92.1649831 72.8350169,100 82.5,100 C92.1649831,100 100,92.1649831 100,82.5 L100,17.85 Z M17.5,75 C13.3578644,75 10,71.6421356 10,67.5 C10,63.3578644 13.3578644,60 17.5,60 C21.6421356,60 25,63.3578644 25,67.5 C25,71.6421356 21.6421356,75 17.5,75 Z M82.5,90 C78.3578644,90 75,86.6421356 75,82.5 C75,78.3578644 78.3578644,75 82.5,75 C86.6421356,75 90,78.3578644 90,82.5 C90,86.6421356 86.6421356,90 82.5,90 Z"
+                id="Shape"
+                fill="white"
+                fill-rule="nonzero"
+              ></path>
+            </g>
+          </svg> -->
           <svg
             width="100px"
             height="100px"
@@ -69,7 +93,7 @@
           >
             <title>icon_music</title>
             <g
-              id="icon_music"
+              id="icon_music_2"
               class="gnb__icon"
               stroke="none"
               stroke-width="1"
@@ -85,7 +109,7 @@
             </g>
           </svg>
         </button>
-        <button>
+        <button class="gnb__setting" onclick="location.href = 'settings.html'">
           <div class="badge__dot-gnb"></div>
           <svg
             width="100px"
@@ -188,7 +212,7 @@
       <article class="user-component--1x">
         <div class="profile--1x">
           <div class="profile-mask">
-            <img class="profile-photo" src="img/img/diseny_logo.png" />
+            <img class="profile-photo" src="img/img/logo_disney.png" />
           </div>
         </div>
         <div class="user-component__content--1x">
