--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           class="login__input"
           type="text"
           placeholder="Email or phone number"
+          required
         />
         <input
           class="login__input"
@@ -55,7 +56,7 @@
           placeholder="Password"
           required
         />
-        <input class="login__btn" type="submit" value="Log In" required />
+        <input class="login__btn" type="submit" value="Log In" />
       </form>
       <button class="login__btn">Sign Up</button>
       <a class="find__id-pw" href="#">Find Disney Account or Password</a>
