--- a/more.html
+++ b/more.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body class="more">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -84,7 +84,7 @@
             </g>
           </svg>
         </button>
-        <button onclick="location.href = 'settings.html'">
+        <button class="gnb__setting" onclick="location.href = 'settings.html'">
           <div class="badge__dot-gnb"></div>
           <svg
             width="100px"
