--- a/chat__third-screen.html
+++ b/chat__third-screen.html
@@ -56,7 +56,7 @@
         </button>
       </div>
       <div class="screen-header__column">
-        <span class="screen-header__title"> Nedd </span>
+        <span class="screen-header__title"> Elsa </span>
       </div>
       <div class="screen-header__column">
         <button>
@@ -115,56 +115,106 @@
         </button>
       </div>
     </nav>
-    <main class="bg-chat">
-      <span class="chat-day">Tuesday, June 30, 2020</span>
+    <main class="bg-chat third">
+      <span class="chat-day">Monday, June 29, 2020</span>
       <div class="chat-you">
         <div class="chat-you__column">
           <div class="profile--0-5x">
             <div class="profile-mask">
-              <img class="profile-photo" src="img/img/img_nedd.png" />
+              <img class="profile-photo" src="img/img/img_queen_thumb.png" />
             </div>
           </div>
         </div>
         <div class="chat-you__column">
           <div class="chat-you__nickname">
-            <span>Nedd</span>
+            <span>Elsa</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">Hey</span>
-          </div>
-          <div class="chat-you__message">
-            <span class="chat-you__bubble">It's big news!</span>
-            <span class="chat-you__time">pm 09:23</span>
+            <span class="chat-you__bubble"
+              >Do you want to build a snowman?</span
+            >
+            <span class="chat-you__time">am 09:23</span>
           </div>
         </div>
       </div>
       <div class="chat-me">
         <div class="chat-me__message">
-          <span class="chat-me__bubble">hey</span>
-        </div>
-        <div class="chat-me__message">
-          <span class="chat-me__time">pm 09:25</span>
-          <span class="chat-me__bubble">What happen? </span>
+          <span class="chat-me__time">am 10:22</span>
+          <span class="chat-me__bubble">hm.. sorry </span>
         </div>
       </div>
       <div class="chat-you">
         <div class="chat-you__column">
           <div class="profile--0-5x">
             <div class="profile-mask">
-              <img class="profile-photo" src="img/img/img_nedd.png" />
+              <img class="profile-photo" src="img/img/img_queen_thumb.png" />
             </div>
           </div>
         </div>
         <div class="chat-you__column">
           <div class="chat-you__nickname">
-            <span>Nedd</span>
+            <span>Elsa</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">Let's meet and talk!</span>
+            <span class="chat-you__bubble">Ok..</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">at tomorrow?</span>
-            <span class="chat-you__time">pm 09:30</span>
+            <span class="chat-you__bubble">bye..</span>
+            <span class="chat-you__time">am 10:25</span>
+          </div>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">am 11:00</span>
+          <span class="chat-me__bubble">Let's hang out later</span>
+        </div>
+      </div>
+      <div class="chat-you">
+        <div class="chat-you__column">
+          <div class="profile--0-5x">
+            <div class="profile-mask">
+              <img class="profile-photo" src="img/img/img_queen_thumb.png" />
+            </div>
+          </div>
+        </div>
+        <div class="chat-you__column">
+          <div class="chat-you__nickname">
+            <span>Elsa</span>
+          </div>
+          <div class="chat-you__message">
+            <span class="chat-you__bubble">Never mind.</span>
+            <span class="chat-you__time">am 11:20</span>
+          </div>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">am 11:22</span>
+          <span class="chat-me__bubble">are u ok?</span>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">pm 11:55</span>
+          <span class="chat-me__bubble">elsa?</span>
+        </div>
+      </div>
+      <div class="chat-you">
+        <div class="chat-you__column">
+          <div class="profile--0-5x">
+            <div class="profile-mask">
+              <img class="profile-photo" src="img/img/img_queen_thumb.png" />
+            </div>
+          </div>
+        </div>
+        <div class="chat-you__column">
+          <div class="chat-you__nickname">
+            <span>Elsa</span>
+          </div>
+          <div class="chat-you__message">
+            <span class="chat-you__bubble">Let it Go!</span>
+            <span class="chat-you__time">pm 12:20</span>
           </div>
         </div>
       </div>
