--- a/chats.html
+++ b/chats.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to kokoa clone challenge</title>
+    <title>Chats - DisneyTalk</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -84,7 +84,55 @@
             </g>
           </svg>
         </button>
-        <button>
+        <button class="gnb__interaction">
+          <svg
+            id="icon_music_3"
+            height="100px"
+            width="100px"
+            fill="inherit"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 48 48"
+            version="1.1"
+            x="0px"
+            y="0px"
+          >
+            <title>1.13</title>
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g fill="rgb(255, 230, 0)">
+                <g>
+                  <path
+                    d="M20,30.515549 L20,14 L20,10.0085302 C20,8.8992496 20.8355618,7.69615936 21.8757076,7.3179245 L40.1242924,0.6820755 C41.1602171,0.305375603 42,0.901950359 42,2.0085302 L42,9.9914698 C42,11.1007504 41.1644382,12.3038406 40.1242924,12.6820755 L24,18.5454545 L24,37.9999998 C24,42.9705627 19.9705627,47 15,47 C10.0294373,47 6,42.9705627 6,38 C6,33.0294373 10.0294373,29 15,29 C16.8501466,29 18.569902,29.5582717 20,30.515549 Z M15,43 C17.7614237,43 20,40.7614237 20,38 C20,35.2385763 17.7614237,33 15,33 C12.2385763,33 10,35.2385763 10,38 C10,40.7614237 12.2385763,43 15,43 Z M24,14.2892 L38,9.19829094 L38,5.71079997 L24,10.8017091 L24,14.2892 Z"
+                  ></path>
+                </g>
+              </g>
+            </g>
+          </svg>
+          <svg
+            id="icon_music"
+            width="inherit"
+            height="inherit"
+            viewBox="0 0 100 100"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <title>icon_music_2</title>
+            <g
+              id="icon_music_1"
+              stroke="none"
+              stroke-width="1"
+              fill="none"
+              fill-rule="evenodd"
+            >
+              <path
+                d="M100,17.85 C100,7.99171722 92.0082828,0 82.15,0 L30,0 C27.2385763,0 25,2.23857625 25,5 L25,51.75 C22.6638279,50.6089125 20.0999359,50.010671 17.5,50 C7.83501688,50 0,57.8350169 0,67.5 C0,77.1649831 7.83501688,85 17.5,85 C27.1649831,85 35,77.1649831 35,67.5 L35,10 L82.15,10 C86.4740843,10.0272821 89.9727179,13.5259157 90,17.85 L90,66.75 C87.6638279,65.6089125 85.0999359,65.010671 82.5,65 C72.8350169,65 65,72.8350169 65,82.5 C65,92.1649831 72.8350169,100 82.5,100 C92.1649831,100 100,92.1649831 100,82.5 L100,17.85 Z M17.5,75 C13.3578644,75 10,71.6421356 10,67.5 C10,63.3578644 13.3578644,60 17.5,60 C21.6421356,60 25,63.3578644 25,67.5 C25,71.6421356 21.6421356,75 17.5,75 Z M82.5,90 C78.3578644,90 75,86.6421356 75,82.5 C75,78.3578644 78.3578644,75 82.5,75 C86.6421356,75 90,78.3578644 90,82.5 C90,86.6421356 86.6421356,90 82.5,90 Z"
+                id="Shape"
+                fill="rgb(0, 255, 255)"
+                fill-rule="nonzero"
+              ></path>
+            </g>
+          </svg>
           <svg
             width="100px"
             height="100px"
@@ -95,7 +143,7 @@
           >
             <title>icon_music</title>
             <g
-              id="icon_music"
+              id="icon_music_2"
               class="gnb__icon"
               stroke="none"
               stroke-width="1"
@@ -151,60 +199,51 @@
       <a class="user-component--2x" href="chat__first-screen.html">
         <div class="profile--2x">
           <div class="profile-mask">
-            <img
-              class="profile-photo"
-              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
-            />
+            <img class="profile-photo" src="img/img/img_nedd.png" />
           </div>
         </div>
         <div class="user-component__content--3x">
           <div class="user__text">
-            <span class="user__nickname">Nickname</span>
-            <span class="user__message">Hi</span>
+            <span class="user__nickname">Nedd</span>
+            <span class="user__message">Hey</span>
           </div>
           <div class="user__subinfo">
-            <span class="user__sub-text">12:22</span>
-            <div class="badge__number-list">4</div>
+            <span class="user__sub-text">pm 9:30</span>
+            <div class="badge__number-list">3</div>
           </div>
         </div>
       </a>
-      <a class="user-component--2x" href="chat__first-screen.html">
+      <a class="user-component--2x" href="chat__second-screen.html">
         <div class="profile--2x">
           <div class="profile-mask">
-            <img
-              class="profile-photo"
-              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
-            />
+            <img class="profile-photo" src="img/img/img_ darthVader.png" />
           </div>
         </div>
         <div class="user-component__content--3x">
           <div class="user__text">
-            <span class="user__nickname">Nickname</span>
-            <span class="user__message">Hi</span>
+            <span class="user__nickname">Darth Vader</span>
+            <span class="user__message">I'm your FATHER.</span>
           </div>
           <div class="user__subinfo">
-            <span class="user__sub-text">12:22</span>
-            <div class="badge__number-list">4</div>
+            <span class="user__sub-text">pm 11:55</span>
+            <div class="badge__number-list">1</div>
           </div>
         </div>
       </a>
-      <a class="user-component--2x" href="chat__first-screen.html">
+      <a class="user-component--2x" href="chat__third-screen.html">
         <div class="profile--2x">
           <div class="profile-mask">
-            <img
-              class="profile-photo"
-              src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"
-            />
+            <img class="profile-photo" src="img/img/img_queen_thumb.png" />
           </div>
         </div>
         <div class="user-component__content--3x">
           <div class="user__text">
-            <span class="user__nickname">Nickname</span>
-            <span class="user__message">Hi</span>
+            <span class="user__nickname">Elsa</span>
+            <span class="user__message">Let it GO!</span>
           </div>
           <div class="user__subinfo">
-            <span class="user__sub-text">12:22</span>
-            <div class="badge__number-list">4</div>
+            <span class="user__sub-text">yesterday</span>
+            <div class="badge__number-list badge__none"></div>
           </div>
         </div>
       </a>
