--- a/chat__second-screen.html
+++ b/chat__second-screen.html
@@ -56,7 +56,7 @@
         </button>
       </div>
       <div class="screen-header__column">
-        <span class="screen-header__title"> Nedd </span>
+        <span class="screen-header__title"> Darth Vaidar </span>
       </div>
       <div class="screen-header__column">
         <button>
@@ -115,57 +115,72 @@
         </button>
       </div>
     </nav>
-    <main class="bg-chat">
+    <main class="bg-chat second">
       <span class="chat-day">Tuesday, June 30, 2020</span>
       <div class="chat-you">
         <div class="chat-you__column">
           <div class="profile--0-5x">
             <div class="profile-mask">
-              <img class="profile-photo" src="img/img/img_nedd.png" />
+              <img class="profile-photo" src="img/img/img_ darthVader.png" />
             </div>
           </div>
         </div>
         <div class="chat-you__column">
           <div class="chat-you__nickname">
-            <span>Nedd</span>
+            <span>Darth Vaidar</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">Hey</span>
-          </div>
-          <div class="chat-you__message">
-            <span class="chat-you__bubble">It's big news!</span>
+            <span class="chat-you__bubble">...</span>
             <span class="chat-you__time">pm 09:23</span>
           </div>
         </div>
       </div>
       <div class="chat-me">
         <div class="chat-me__message">
-          <span class="chat-me__bubble">hey</span>
-        </div>
-        <div class="chat-me__message">
-          <span class="chat-me__time">pm 09:25</span>
-          <span class="chat-me__bubble">What happen? </span>
+          <span class="chat-me__time">21:22</span>
+          <span class="chat-me__bubble">Hello?? </span>
         </div>
       </div>
       <div class="chat-you">
         <div class="chat-you__column">
           <div class="profile--0-5x">
             <div class="profile-mask">
-              <img class="profile-photo" src="img/img/img_nedd.png" />
+              <img class="profile-photo" src="img/img/img_ darthVader.png" />
             </div>
           </div>
         </div>
         <div class="chat-you__column">
           <div class="chat-you__nickname">
-            <span>Nedd</span>
+            <span>Darth Vaidar</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">Let's meet and talk!</span>
+            <span class="chat-you__bubble">I'm</span>
           </div>
           <div class="chat-you__message">
-            <span class="chat-you__bubble">at tomorrow?</span>
-            <span class="chat-you__time">pm 09:30</span>
+            <span class="chat-you__bubble">your</span>
           </div>
+          <div class="chat-you__message">
+            <span class="chat-you__bubble">FATHER.</span>
+            <span class="chat-you__time">pm 09:22</span>
+          </div>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">pm 09:22</span>
+          <span class="chat-me__bubble">what??</span>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">pm 11:22</span>
+          <span class="chat-me__bubble">who are u??</span>
+        </div>
+      </div>
+      <div class="chat-me">
+        <div class="chat-me__message">
+          <span class="chat-me__time">pm 11:55</span>
+          <span class="chat-me__bubble">hey!</span>
         </div>
       </div>
     </main>
