--- a/find.html
+++ b/find.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to kokoa clone challenge</title>
+    <title>Find - DisneyTalk</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -243,7 +243,7 @@
             <div class="open-chat__thumbnail">
               <div class="open-chat__like">
                 <i class="fas fa-heart"></i>
-                <span>200</span>
+                <span>2,150</span>
               </div>
               <img class="open-chat__photo" src="img/img/toy_story.jpg"></img>
             </div>
@@ -251,12 +251,12 @@
         </article>
         <article class="open-chat">
           <div class="open-chat__column">
-            <span>#BTS</span>
-            <span>#BTS#ARMY</span>
+            <span>#STARWARS</span>
+            <span>#STARWARS#GAME</span>
             <div class="open-chat__status">
               <div class="profile--tiny">
                 <div class="profile-mask">
-                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                  <img class="profile-photo" src="img/img/img_starwars_thumb.png"></img>
                 </div>
               </div>
               <span>202 members |</span><span>Active</span>
@@ -266,82 +266,58 @@
             <div class="open-chat__thumbnail">
               <div class="open-chat__like">
                 <i class="fas fa-heart"></i>
-                <span>200</span>
+                <span>130</span>
               </div>
-              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              <img class="open-chat__photo" src="img/img/img_starwars.png"></img>
             </div>
           </div>
         </article>
         <article class="open-chat">
           <div class="open-chat__column">
-            <span>#BTS</span>
-            <span>#BTS#ARMY</span>
+            <span>#MOVIE</span>
+            <span>#FROZEN#COCO</span>
             <div class="open-chat__status">
               <div class="profile--tiny">
                 <div class="profile-mask">
-                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                  <img class="profile-photo" src="img/img/img_queen_thumb.png"></img>
                 </div>
               </div>
-              <span>202 members |</span><span>Active</span>
+              <span>3,202 members |</span><span>Active</span>
             </div>
           </div>
           <div class="open-chat__column">
             <div class="open-chat__thumbnail">
               <div class="open-chat__like">
                 <i class="fas fa-heart"></i>
-                <span>200</span>
+                <span>1,200</span>
               </div>
-              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              <img class="open-chat__photo" src="img/img/img_ani.png"></img>
             </div>
           </div>
         </article>
         <article class="open-chat">
           <div class="open-chat__column">
-            <span>#BTS</span>
-            <span>#BTS#ARMY</span>
+            <span>#MARVEL</span>
+            <span>#AVENGERS#HERO</span>
             <div class="open-chat__status">
               <div class="profile--tiny">
                 <div class="profile-mask">
-                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+                  <img class="profile-photo" src="img/img/img_avengers.png"></img>
                 </div>
               </div>
-              <span>202 members |</span><span>Active</span>
+              <span>10,202 members |</span><span>Active</span>
             </div>
           </div>
           <div class="open-chat__column">
             <div class="open-chat__thumbnail">
               <div class="open-chat__like">
                 <i class="fas fa-heart"></i>
-                <span>200</span>
+                <span>3,200</span>
               </div>
-              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
+              <img class="open-chat__photo" src="img/img/img_thanos.png"></img>
             </div>
           </div>
         </article>
-        <article class="open-chat">
-          <div class="open-chat__column">
-            <span>#BTS</span>
-            <span>#BTS#ARMY</span>
-            <div class="open-chat__status">
-              <div class="profile--tiny">
-                <div class="profile-mask">
-                  <img class="profile-photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-                </div>
-              </div>
-              <span>202 members |</span><span>Active</span>
-            </div>
-          </div>
-          <div class="open-chat__column">
-            <div class="open-chat__thumbnail">
-              <div class="open-chat__like">
-                <i class="fas fa-heart"></i>
-                <span>200</span>
-              </div>
-              <img class="open-chat__photo" src="https://images.chosun.com/resizer/IreInsQQFUYvnvMv-9IQP0QOFzw=/601x398/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/UEHMTNLTLU2GPM5REEDSORFZXQ.jpg"></img>
-            </div>
-          </div>
-        </article>
-
       </div>
     </main>
     <article class="bottom-tabbar">
