--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
       <button class="login__btn">Sign Up</button>
       <a class="find__id-pw" href="#">Find Disney Account or Password</a>
     </main>
-    <div class="profile">
-      <div class="profile-mask">
-        <div class="profile-photo"></div>
-      </div>
-    </div>
+    <div class="splash">
+      <lottie-player
+        src="https://assets10.lottiefiles.com/packages/lf20_ywnYax.json"
+        background="transparent"
+        speed="1"
+        style="width: 300px; height: 300px"
+        autoplay
+      ></lottie-player>
     <!-- big screen info -->
     <div id="no-mobile">
       <span>Your screen is too big :(</span>
     </div>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
