--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         style="width: 300px; height: 300px"
         autoplay
       ></lottie-player>
+    </div>
+
     <!-- big screen info -->
     <div id="no-mobile">
       <span>Your screen is too big :(</span>
