--- a/chats.html
+++ b/chats.html
@@ -205,11 +205,11 @@
         <div class="user-component__content--3x">
           <div class="user__text">
             <span class="user__nickname">Nedd</span>
-            <span class="user__message">Hey</span>
+            <span class="user__message">at tomorrow?</span>
           </div>
           <div class="user__subinfo">
             <span class="user__sub-text">pm 9:30</span>
-            <div class="badge__number-list">3</div>
+            <div class="badge__number-list">1</div>
           </div>
         </div>
       </a>
@@ -222,11 +222,11 @@
         <div class="user-component__content--3x">
           <div class="user__text">
             <span class="user__nickname">Darth Vader</span>
-            <span class="user__message">I'm your FATHER.</span>
+            <span class="user__message">FATHER.</span>
           </div>
           <div class="user__subinfo">
             <span class="user__sub-text">pm 11:55</span>
-            <div class="badge__number-list">1</div>
+            <div class="badge__number-list">3</div>
           </div>
         </div>
       </a>
